--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,12 @@
+.counter{
+    text-align: center;
+    background-color: pink;
+}
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.counter div { 
+    background-color: plum;
+    border-radius: 25px;
+    font-size: 100px;
+    color: white;
+    width: 120px;
+}
